add opt-out func, start refactoring naiveDeal to safe limit cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div id="gameContainer">
+  <div id="gameContainer" class="noselect" oncontextmenu="return false;">
     <canvas id="bot"></canvas>
     <canvas id="mid"></canvas>
     <canvas id="top"></canvas>
