basic gameplay works

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+  <h1>Musta-Maija</h1>
   <div id="gameContainer" class="noselect" oncontextmenu="return false;">
     <canvas id="bot"></canvas>
     <canvas id="mid"></canvas>
