--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
 
-  <h1>Musta-Maija</h1>
-  <div id="gameContainer" class="noselect" oncontextmenu="return false;">
-    <canvas id="bot"></canvas>
-    <canvas id="mid"></canvas>
-    <canvas id="top"></canvas>
+  <div class="container">
+    <h1>Musta-Maija</h1>
+    <div id="gameContainer" class="noselect" oncontextmenu="return false;">
+      <canvas id="bot"></canvas>
+      <canvas id="mid"></canvas>
+      <canvas id="top"></canvas>
+    </div>
   </div>
 
 </body>
